--- a/LandingPage470/Base.lproj/Main.storyboard
+++ b/LandingPage470/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="3u2-UU-7To">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="3u2-UU-7To">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -35,7 +35,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <state key="normal" title="Events + Tickets"/>
                                 <connections>
-                                    <segue destination="hef-1H-wyS" kind="show" id="1Q4-Fk-bjt"/>
+                                    <segue destination="hef-1H-wyS" kind="show" id="3qv-7l-JKx"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JSY-On-S3S">
@@ -43,7 +43,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <state key="normal" title="About"/>
                                 <connections>
-                                    <segue destination="opW-Hn-zxx" kind="show" id="9Io-7s-qj4"/>
+                                    <segue destination="CSr-l9-jsA" kind="show" id="2Rb-SG-biS"/>
                                 </connections>
                             </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sKj-IW-t7t">
@@ -217,7 +217,7 @@
         <!--SeatMap View Controller-->
         <scene sceneID="4CH-ka-hsH">
             <objects>
-                <viewController id="CSr-l9-jsA" userLabel="SeatMap View Controller" customClass="WHviewController" customModule="WH_map" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="CSr-l9-jsA" userLabel="SeatMap View Controller" customClass="WHviewController" customModule="LandingPage470" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y85-qa-yaB"/>
                         <viewControllerLayoutGuide type="bottom" id="CKN-jO-VHB"/>
@@ -231,15 +231,11 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oFn-42-UZ5">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="583"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                 </subviews>
                             </scrollView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gFp-VK-EvT" customClass="MyButton" customModule="WH_map" customModuleProvider="target">
-                                <rect key="frame" x="40" y="65" width="10" height="10"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
@@ -250,10 +246,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YAW-Sr-duu" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3426" y="614"/>
+            <point key="canvasLocation" x="344.80000000000001" y="1227.4362818590705"/>
         </scene>
     </scenes>
     <resources>
         <image name="gmc-logo" width="286" height="92"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="2Rb-SG-biS"/>
+    </inferredMetricsTieBreakers>
 </document>
